homepage and many more stuff

--- a/source/analysis-2.html.erb
+++ b/source/analysis-2.html.erb
@@ -93,7 +93,7 @@
 
 
 
-<%= partial "partials/action-bar", :locals => { :text => "Last modified on 03/12/2017 à 12:17,",:text2 => "Par Denis C. - INSA", :link => "transition-3.html", :link_back => "analysis-1.html" } %>
+<%= partial "partials/action-bar", :locals => { :text => "Last modified on 03/12/2017 à 12:17,",:text2 => "Par Denis C. - INSA", :link => "transition-3.html", :link_back => "analysis.html" } %>
 
 <%= partial "partials/javascripts" %>
 
