--- a/source/stylesheets/components/_patent.scss
+++ b/source/stylesheets/components/_patent.scss
@@ -7,4 +7,10 @@
 	color:white;
 	border-left: solid 2px $green;
 	margin-bottom: 1px;
-} 
+	$elements: 25;
+	@for $i from 0 to $elements {
+	  &:nth-child(#{$i}) {
+	     background: rgba( $green, $i*.1 );
+	  }
+	}
+}
