--- a/source/stylesheets/config/_bootstrap_variables.scss
+++ b/source/stylesheets/config/_bootstrap_variables.scss
@@ -33,3 +33,6 @@ $label-default-bg: #fff;
 $label-primary-bg: #194361;
 
 
+$container-tablet: 1170px;
+$container-desktop: 1170px;
+$container-sm: 1170px;
