--- a/source/stylesheets/layout/_navbar.scss
+++ b/source/stylesheets/layout/_navbar.scss
@@ -44,25 +44,77 @@
 .navbar-secondary {
   background: #FFFFFF;
   border-bottom: none;
+  position: relative;
   box-shadow: 0 2px 2px 0 rgba(0,0,0,0.10);
+
+  &:before {
+    content: "";
+    display: block;
+    background: $blue;
+    width: 50%;
+    height: 3px;
+    position: absolute;
+    bottom: -2px;
+    left: 0px;
+    .home & {
+      display: none;
+    }
+  }
+  .navbar-nav {
+    margin-bottom: -7px;
+    background: linear-gradient(to bottom, white 0%, #fffcfc 96%, #d6d9db 97%, #E7EBEC 100%);
+    position: relative;
+  }
   .nav-link {
     font-size: 18px;
-    color: $grey-light;
     font-weight: bold;
     margin-right: 60px;
+    color: $grey;
+    .ionicons {
+      display: inline-block;
+      margin-left: 8px;
+      color: $blue;
+    }
+    &:hover, &:active, &:focus {
+      background: transparent;
+      cursor: default;
+    }
   }
+  .nav-item {
+    position: static;
+    &.active ~ .nav-item {
+      .nav-link {
+        color: $grey-light;
+        .ionicons {
+          display: none;
+        }
+      }
+    }
+  }
+
+
   .nav-item.active .nav-link {
     color: $blue;
-    position: relative;
+    position: static;
+
     &:before {
       content: "";
       display: block;
       background: $blue;
-      width: 50%;
       height: 3px;
       position: absolute;
-      bottom: -7px;
-      left: 0pc;
+      bottom: 0px;
+      left: 0px;
+      width: 236px;
+      .definition & {
+        width: 50px;
+      }
+      .sun-diagram & {
+        width: 390px;
+      }
+      .export & {
+        width: 560px;
+      }
     }
     &:after {
       content: "";
@@ -73,8 +125,20 @@
       width: 12px;
       height: 12px;
       position: absolute;
-      bottom: -11px;
-      left: 50%;
+      bottom: -5px;
+      left: 236px;
+      .definition & {
+        left: 50px;
+      }
+      .sun-diagram & {
+        left: 390px;
+      }
+      .export & {
+        left: 560px;
+      }
+    }
+    .ionicons {
+      display: none;
     }
   }
 }
